--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 23:05:03 2018</p>
+         Last Run: Thu Nov  1 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -38,23 +38,23 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
                         <td>6</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>21</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
                         <td>5</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>25</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "78",
-                 "66",
+                 "65",
                  "56"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "21",
-                 "25"
+                 "29",
+                 "32",
+                 "37"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 23:05:03 2018</p>
+         Last Run: Thu Nov  1 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>30</td>
+                        <td>35</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>72</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>9</td>
                         <td>9</td>
                         <td>24</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>71</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>16</td>
-                        <td>50</td>
+                        <td>18</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>72</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "30",
+                 "35",
                  "24",
-                 "16"
+                 "18"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "51",
-                 "50"
+                 "52",
+                 "51"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "71",
-                 "72"
+                 "73",
+                 "74",
+                 "74"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 23:05:03 2018</p>
+         Last Run: Thu Nov  1 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,13 +462,13 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-4</td>
+                        <td>-5</td>
                         <td>24</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>87</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -485,14 +485,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>7</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>6</td>
                         <td>83</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>83</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-2",
                  "-3",
-                 "-3"
+                 "-4"
                ]
              }
            ]
@@ -592,7 +592,7 @@
                "data":[
                  "24",
                  "24",
-                 "7"
+                 "6"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "81",
                  "83"
                ]
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
+                 "86",
                  "85",
-                 "83"
+                 "82"
                ]
              }
            ]
