--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 00:05:02 2018</p>
+         Last Run: Thu Nov  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -58,7 +58,7 @@
                         <td>6</td>
                         <td>4</td>
                         <td>5</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -173,7 +173,7 @@
                "data":[
                  "78",
                  "65",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 00:05:02 2018</p>
+         Last Run: Thu Nov  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>35</td>
+                        <td>24</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>73</td>
+                        <td>WNW</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,10 +261,10 @@
                         <td>9</td>
                         <td>9</td>
                         <td>24</td>
-                        <td>52</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>74</td>
                      </tr>
                      <tr>
@@ -272,12 +272,12 @@
                         <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>18</td>
-                        <td>51</td>
+                        <td>16</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
                  "24",
-                 "18"
+                 "24",
+                 "16"
                ]
              },
              {
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "52",
-                 "52",
-                 "51"
+                 "50",
+                 "48"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
                  "74",
-                 "74"
+                 "74",
+                 "75"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 00:05:02 2018</p>
+         Last Run: Thu Nov  1 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,37 +462,37 @@
                         <td>09:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-5</td>
-                        <td>24</td>
-                        <td>79</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>86</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-4</td>
                         <td>24</td>
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
-                        <td>85</td>
+                        <td>87</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-3</td>
+                        <td>24</td>
+                        <td>83</td>
+                        <td>0</td>
+                        <td>5</td>
+                        <td>NNW</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
-                        <td>83</td>
+                        <td>11</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NW</td>
-                        <td>82</td>
+                        <td>NNW</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
-                 "-6",
+                 "-4",
+                 "-3",
                  "-7"
                ]
              },
@@ -592,7 +592,7 @@
                "data":[
                  "24",
                  "24",
-                 "6"
+                 "11"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
                  "81",
-                 "83"
+                 "83",
+                 "86"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "87",
                  "86",
-                 "85",
-                 "82"
+                 "84"
                ]
              }
            ]
